# QCdot

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  USAGE.md  USAGE_zh.md
.dbg/: qpainter-engine-error.env
.trae/commands/: build.md
editor/: CMakeLists.txt
editor/include/QBlock/: ConnectionWidget.h  EditorScene.h  InlineNodePicker.h  NodeEditor.h  NodeIconFactory.h  NodePickerDialog.h  NodeWidget.h  PortWidget.h  ThemeManager.h  Translator.h
editor/src/: ConnectionWidget.cpp  EditorScene.cpp  NodeEditor.cpp  NodePickerDialog.cpp  NodeWidget.cpp  PortWidget.cpp  ThemeManager.cpp  Translator.cpp
engine/: CMakeLists.txt
engine/include/QBlock/: Connection.h  DataType.h  Engine.h  ExecutionEngine.h  Node.h  NodeGraph.h  Port.h  Serializer.h  Variant.h
examples/: CMakeLists.txt
examples/QCdot-editor/: CMakeLists.txt  ConsoleRedirector.h  ConsoleWidget.h  NodePalette.h  main.cpp
examples/simple_editor/: CMakeLists.txt  NodePalette.h  main.cpp
nodes/: CMakeLists.txt
nodes/include/QBlock/: BuiltinNodes.h
tests/: CMakeLists.txt
